--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- CHAMANDO O CSS EXTERNO -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Foco Absoluto</title>
+
 </head>
 <body>
 
@@ -13,12 +14,13 @@
         <h1 id="home">Foco Absoluto - CP2</h1>
         <nav>
             <ul>
-                <a href="https://open.spotify.com/intl-pt">Spotify</a>
-                <a href="https://github.com/">Github</a>
-                <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjtlsnaqpaNAxUygFoFHbMsGXcYABAAGgJ2dQ&co=1&gclid=EAIaIQobChMI7ZbJ2qqWjQMVMoBaBR2zLBl3EAAYASAAEgIEKfD_BwE&ohost=www.google.com&cid=CAASJeRou7vT2Fv2yM1d4YwqZGvRkReSzKvLnC2xsOTIYJU-Y3JzdzU&sig=AOD64_3Nqc0zQKP171l3AkyFD3-9q6LRsg&q&adurl&ved=2ahUKEwjU58HaqpaNAxUvp5UCHdyGCVQQ0Qx6BAgZEAE">Alura</a>
-                <a href=""></a>
+                <a href="https://open.spotify.com/intl-pt" target="_blank">Spotify</a>
+                <a href="https://github.com/" target="_blank">Github</a>
+                <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjtlsnaqpaNAxUygFoFHbMsGXcYABAAGgJ2dQ&co=1&gclid=EAIaIQobChMI7ZbJ2qqWjQMVMoBaBR2zLBl3EAAYASAAEgIEKfD_BwE&ohost=www.google.com&cid=CAASJeRou7vT2Fv2yM1d4YwqZGvRkReSzKvLnC2xsOTIYJU-Y3JzdzU&sig=AOD64_3Nqc0zQKP171l3AkyFD3-9q6LRsg&q&adurl&ved=2ahUKEwjU58HaqpaNAxUvp5UCHdyGCVQQ0Qx6BAgZEAE" target="_blank">Alura</a>
+                <a href="https://openai.com/" target="_blank">ChatGPT</a>
             </ul>
         </nav>
+    </section>
     </header>
     
 </body>
