--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         <h1 id="home">Foco Absoluto - CP2</h1>
         <nav>
             <ul>
-                <a href="https://open.spotify.com/intl-pt" target="_blank">Spotify</a>
-                <a href="https://github.com/" target="_blank">Github</a>
-                <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjtlsnaqpaNAxUygFoFHbMsGXcYABAAGgJ2dQ&co=1&gclid=EAIaIQobChMI7ZbJ2qqWjQMVMoBaBR2zLBl3EAAYASAAEgIEKfD_BwE&ohost=www.google.com&cid=CAASJeRou7vT2Fv2yM1d4YwqZGvRkReSzKvLnC2xsOTIYJU-Y3JzdzU&sig=AOD64_3Nqc0zQKP171l3AkyFD3-9q6LRsg&q&adurl&ved=2ahUKEwjU58HaqpaNAxUvp5UCHdyGCVQQ0Qx6BAgZEAE" target="_blank">Alura</a>
-                <a href="https://openai.com/" target="_blank">ChatGPT</a>
+                <a href="https://open.spotify.com/intl-pt" target="_blank">
+                    <img src="./css/51rttY7a+9L.png" alt="" class="spotify"></a>               
+                <a href="https://github.com/" target="_blank">
+                    <img src="./css/GitHub_Invertocat_Logo.svg.png" alt="" class="github"></a>
+                <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjtlsnaqpaNAxUygFoFHbMsGXcYABAAGgJ2dQ&co=1&gclid=EAIaIQobChMI7ZbJ2qqWjQMVMoBaBR2zLBl3EAAYASAAEgIEKfD_BwE&ohost=www.google.com&cid=CAASJeRou7vT2Fv2yM1d4YwqZGvRkReSzKvLnC2xsOTIYJU-Y3JzdzU&sig=AOD64_3Nqc0zQKP171l3AkyFD3-9q6LRsg&q&adurl&ved=2ahUKEwjU58HaqpaNAxUvp5UCHdyGCVQQ0Qx6BAgZEAE" target="_blank">
+                    <img src="./css/unnamed.png" alt="" class="alura"></a>
+                <a href="https://openai.com/" target="_blank">
+                    <img src="./css/ChatGPT-Logo.svg.png" alt="" class="chatgpt">
+                </a>
             </ul>
         </nav>
     </section>
