organizando arquivo js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 
     <header>
-        <h1 id="home">Foco Absoluto - CP2</h1>
+
+        </h1><img src="./css/imagens/logo.png" alt="" class="logo"> </h1>
         <nav>
             <ul>
                 <a href="https://open.spotify.com/intl-pt" target="_blank">
