Css semi estilizado pomodoro

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
         </nav>
         </section>
     </header>
-
+    <div class="pomodoro-container">
+        <h1>Pomodoro</h1>
+        <div class="timer" id="timer">25:00</div>
+        <div class="controls">
+            <button onclick="startTimer()">Iniciar</button>
+            <button onclick="resetTimer()">Resetar</button>
+        </div>
+        <p id="status">Tempo de foco</p>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
