--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     </header>
     <div class="pomodoro-container">
         <h1>Pomodoro</h1>
+        <div class="input-group">
+            <labeL>Tempo de foco (min):</labeL>
+            <input type="number" id="inputFocus" value="25" min="1">
+            <label>Pausa Curta (min):</label>
+            <input type="number" id="inputshortbreak" value="5" min="1">
+            <label>Pausa Longa (min):</label>
+            <input type="number" id="inputlongbreak" value="15" min="1">
+        </div>
         <div class="timer" id="timer">25:00</div>
         <div class="controls">
             <button onclick="startTimer()">Iniciar</button>
@@ -40,7 +48,6 @@
         </div>
         <p id="status">Tempo de foco</p>
     </div>
+    
     <script src="./js/script.js"></script>
 </body>
-
-</html>
