adicionando bloco de anotações e finalizando o site

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         </div>
 
         <p id="status">Tempo de foco</p>
+
+    <div class="notes">
+        <label for="noteInput">Anotações:</label>
+        <textarea id="noteInput" rows="5" cols="30" placeholder="Deixe suas anotações aqui"></textarea>
+        <button id="saveButton">Salvar Anotações</button>
     </div>
     
     <script src="./js/script.js"></script>
